[package]
name = "kvs"
version = "0.1.0"
authors = ["Richard Pringle <rpring9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
fehler = "1.0.0"
avro-rs = "0.10.0"
serde = "1.0.114"
serde_json = "1.0.55"
thiserror = "1.0.20"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
